--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- <title>My Project [442107962]</title>
+ <title>My Project [442107962]@qu.edu.sa</title>
 </head>
 <body>
 <h1>Welcome to My Project [442107962]</h1>
