--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 <head>
- <title>My Project [442107962]@qu.edu.sa</title>
-</head>
-<body>
-<h1>Welcome to My Project [442107962]</h1>
-</body>
+ <title>My Project [442107962]@qu.edu.sa</title> 
+<style> 
+body {background-color:powderblue;} 
+h1 {color:blue;}
+p {color:red;}
+h2 {color:green;}
+</style>
+</head> 
+<body> 
+<h1>Welcome to My Project [442107962]</h1> 
+</body> 
 </html>
